# AgentChat

./: .dockerignore  .gitignore  README.md  README_EN.md  README_NEW.md  chat.html  pyproject.toml  requirements.txt
backend/: .env  config.yaml  main.py  settings.py
backend/api/: router.py
backend/api/errcode/: base.py  user.py
backend/api/services/: agent.py  chat.py  dialog.py  history.py  knowledge.py  knowledge_file.py  llm.py  mcp_agent.py  mcp_chat.py  mcp_server.py  tool.py  user.py
backend/api/v1/: agent.py  chat.py  dialog.py  history.py  knowledge.py  knowledge_file.py  llm.py  mcp_agent.py  mcp_chat.py  mcp_server.py  message.py  mineru.py  tool.py  user.py
backend/autobuild/: build.py  client.py  manager.py
backend/cache/: redis.py
backend/chat/: chat_bot.py  client.py  impl.py  openai.py  qwen.py
backend/config/: service_config.py  user_config.py
backend/core/: models.py
backend/core/models/: models.py
backend/data/: __init__.py  function_openai.json  index_config.json  index_delete.json  llm.py  tool.json
backend/database/: __init__.py  base_830.py  init_data.py  model_830.py  service_830.py
backend/database/dao/: __init__.py  agent.py  dialog.py  knowledge.py  knowledge_file.py  llm.py  mcp_agent.py  mcp_server.py  message.py  role.py  tool.py  user.py  user_role.py
backend/database/models/: agent.py  dialog.py  history.py  knowledge.py  knowledge_file.py  llm.py  mcp_agent.py  mcp_server.py  role.py  user.py  user_role.py
backend/database/old_versions/: __init__.py  base_v0_1.py  model_0_1.py  service_0_1.py
backend/database/versions_0_1/: service_0_1.py
backend/errcode/: base.py  user.py
backend/processor/: chat_bot.py
backend/prompt/: llm_prompt.py  template.py
backend/prompts/: llm_prompt.py  system.py  template.py  tool_prompt.py
backend/rag/: embedding.py  milvus_client.py  rerank.py
backend/rag/document/: markdown.py
backend/routers/: agent.py  chat.py  dialog.py  history.py  llm.py  message.py  mineru.py  tool.py  user.py
backend/schema/: chunk.py  message.py  search.py
backend/service/: agent.py  chat.py  dialog.py  history.py  knowledge_file.py  llm.py  tool.py  user.py
backend/services/: oss.py  rag_handler.py  retrieval.py
backend/services/autobuild/: build.py  client.py  manager.py
backend/services/chat/: client.py
backend/services/mcp/: mcp_client.py  mcp_manager.py  mcp_util.py  strict_schema.py
backend/services/rag/: __init__.py  embedding.py  es_client.py  load_document.py  milvus_client.py  parser.py  rerank.py
backend/services/rewrite/: markdown_rewrite.py  query_write.py
backend/test/: test_React.py  test_chat.py  test_code.py  test_config.py  test_craw.py  test_delivery.py  test_split.py  test_tool.py
backend/test/chat_version_0_1/: qwen.py
backend/tools/: __init__.py
backend/type/: message.py  schemas.py
backend/utils/: captcha.py  file_utils.py  helpers.py
chat/: main.py
chat/action/: __init__.py
chat/cache/: redis.py
chat/config/: __init__.py  langfuse_config.py  llm_config.py  service_config.py  system_config.yaml  tool_config.py  user_config.py  user_config.yaml
chat/database/: __init__.py  base.py  base_830.py  model.py  service.py  service_830.py
chat/llm/: openai.py  qwen.py
chat/processor/: chat_bot.py  impl.py
chat/prompt/: llm_prompt.py  resp_template.py  template.py  weather_prompt.py
chat/rag/: __init__.py  embedding.py  eval.py  load_document.py  rerank.py
chat/routers/: agent.py  chat.py  dialog.py  history.py  message.py  tool.py  user.py
chat/service/: agent.py  dialog.py  history.py  message.py  tool.py  user.py
chat/test/: test_chat.py  test_config.py  test_delivery.py  test_sqlmodel.py  test_tool.py  test_weather.py
chat/tools/: __init__.py  function_openai.json
chat/type/: schemas.py
chat/utils/: JWT.py  constants.py  hash.py  helpers.py
docker/: Dockerfile  Dockerfile.frontend  Dockerfile.frontend.prod  README.md  docker-compose.prod.yml  docker-compose.yml  docker.env.example  docker_config.yaml  nginx.conf  start.sh  start_linux.sh  start_win.bat  stop.sh
docs/: API_Documentation_v1.0.md  API_Documentation_v2.0.md  API_Documentation_v3.0.md  agentchat.md  api.md  database.md  migration.md
docs/development/: install_minio_win.md
docs/reference/: agentchat.md  core.md  migration.md  service.md
frontback/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontback/src/: App.vue
frontend/: components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  type.ts
my-ai/: components.d.ts  package-lock.json  package.json
my-ai/src/: App.vue
scripts/: README.md  fix_fastapi_jwt_auth.py  start.py
src/backend/: README.md  pyproject.toml  requirements.txt
src/backend/agentchat/mcp_servers/lark_mcp/: Lark-MCP工具文档.md  main.py  mcp_server.py  pyproject.toml
src/backend/agentchat/mcp_servers/lark_mcp/mcp_tool/calendar/: book_meeting.py  create_calendar.py  delete_calendar.py  get_calendar_info.py  get_calendar_list.py  primary_calendar.py  update_calendar.py
src/backend/agentchat/mcp_servers/lark_mcp/mcp_tool/calendar_event/: append_calendar_event_attendees.py  create_calendar_event.py  delete_calendar_event.py  get_calendar_event_info.py  update_calendar_event.py
src/backend/agentchat/mcp_servers/lark_mcp/mcp_tool/chat_member/: create_chat_member.py  delete_chat_member.py  get_chat_member_info.py
src/backend/agentchat/mcp_servers/lark_mcp/mcp_tool/document/: create_document.py  get_document_data.py
src/backend/agentchat/mcp_servers/lark_mcp/mcp_tool/folder/: create_folder.py  list_folder_files.py
src/backend/agentchat/mcp_servers/lark_mcp/mcp_tool/message/: create_message.py
src/backend/agentchat/mcp_servers/lark_mcp/mcp_tool/user_info/: batch_get_id_user.py  get_user_info.py
src/backend/agentchat/mcp_servers/lark_mcp/mcp_tool/utils/: time.py
src/frontend/: DEBUGGING_GUIDE.md  components.d.ts  package-lock.json  package.json  sse.html  test.html  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
(+496 files in other folders)
