[tool.poetry]
name = "agentchat"
version = "2.0.0"
description = ""
authors = ["tianmingguang <2593666979@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
# Core web framework
fastapi = "~0.115.5"
uvicorn = "~0.34.0"
starlette = ">=0.40.0,<0.47.0"

# LangChain ecosystem
langchain = "~0.3.26"
langchain-community = "~0.0.38"
langchain-core = "~0.3.40"
langchain-experimental = "0.3.4"
langchain-huggingface = "0.1.2"
langchain-openai = "~0.3.0"
langchain-text-splitters = "~0.3.0"
langgraph = "~0.4.9"
langsmith = "0.3.20"
langfuse = "2.57.4"

# AI/ML providers
openai = "~1.95.0"
anthropic = "~0.42.0"
dashscope = "1.20.4"
litellm = "1.52.10"

# Data processing
pydantic = "~2.11.7"
pydantic-core = "2.27.2"
pandas = "~2.2.2"
numpy = "1.26.4"
scipy = "1.14.1"
pyarrow = "17.0.0"
orjson = "~3.10.12"

# Vector databases and search
chromadb = "~0.6.3"
pymilvus = "~2.5.4"
elasticsearch = "~7.0.0"

# Authentication and security
fastapi-jwt-auth = "0.5.0"
captcha = "0.6.0"
rsa = "4.9"
PyJWT = "1.7.1"
cryptography = "43.0.0"
bcrypt = "4.2.0"

# Data storage and databases
redis = "~5.2.1"
SQLAlchemy = "~2.0.32"
sqlmodel = "~0.0.21"
PyMySQL = "1.1.1"
python-multipart = "0.0.9"

# Document processing
pypdf = "4.3.1"
PyMuPDF = "1.23.8"  # keeping existing version for compatibility
python-docx = "1.1.2"
pdf2image = "1.17.0"
pdf2docx = "~0.5.8"
pdfplumber = "0.11.4"
unstructured = "0.15.9"
unstructured-client = "0.25.5"
unstructured-inference = "0.7.36"
reportlab = "~4.4.2"

# Web scraping and crawling
beautifulsoup4 = "4.12.3"
selenium = "4.34.2"
playwright = "~1.53.0"
Crawl4AI = "~0.6.3"
requests = "~2.32.3"
requests-html = "0.10.0"
httpx = "~0.27.2"
httpx-sse = "0.4.0"
aiohttp = "~3.11.11"
aiofiles = "~24.1.0"

# Machine learning and embeddings
sentence-transformers = "3.0.1"
FlagEmbedding = "1.2.11"
transformers = "4.44.2"
tokenizers = "0.19.1"
accelerate = "0.33.0"
torch = "*"  # commented in requirements, keeping flexible
torchvision = "0.19.0"
huggingface-hub = "0.24.6"
datasets = "~3.2.0"
peft = "0.12.0"
safetensors = "0.4.4"

# Text processing
lxml = "5.3.0"
lxml-html-clean = "0.4.2"
nltk = "3.9.1"
tiktoken = "0.7.0"
langdetect = "1.0.9"
jieba = "^0.42.1"  # keeping from original

# Search and knowledge
tavily-python = "0.7.10"
google-search-results = "2.4.2"
arxiv = "2.1.3"
wikipedia = "^1.4.0"  # keeping from original

# Utilities
loguru = "~0.7.2"
rich = "13.8.0"
typer = "0.12.5"
click = "8.1.7"
tqdm = "4.66.5"
tenacity = "8.5.0"
cachetools = "5.5.0"
appdirs = "1.4.4"
platformdirs = "4.2.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
PyYAML = "6.0.2"

# Visualization and plotting
matplotlib = "3.9.2"
networkx = "3.3"

# File format support
openpyxl = "3.1.5"
pillow = "10.4.0"
emoji = "2.12.1"

# Cloud storage
boto3 = "1.35.10"
botocore = "1.35.10"
oss2 = "~2.19.1"

# Monitoring and observability
opentelemetry-api = "1.27.0"
opentelemetry-sdk = "1.27.0"
opentelemetry-instrumentation-fastapi = "0.48b0"
posthog = "3.6.0"

# Development and testing
pytest = "8.3.3"
pytest-mockito = "0.0.4"

# Async support
anyio = "4.5.0"
asyncio-throttle = "*"  # if needed
websockets = "13.0.1"

# Other utilities
multiprocess = "0.70.16"
certifi = "2024.7.4"
urllib3 = "2.2.2"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
idna = "3.7"
colorama = "0.4.6"
backoff = "2.2.1"
filelock = "3.15.4"
packaging = "23.2"
setuptools = "72.1.0"
wheel = "0.43.0"
build = "1.2.1"

# MCP support
mcp = "~1.6.0"

# Document conversion
unoconv = "0.9.0"
pypandoc = "1.15"

# Computer vision
opencv-python = "4.10.0.84"

# Evaluation and testing
ragas = "~0.2.5"

# Optional dependencies
celery = { extras = ["redis"], version = "^5.3.6", optional = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
