[tool.poetry]
name = "agentchat"
version = "2.0.0"
description = ""
authors = ["tianmingguang <2593666979@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

# Core web framework
fastapi = "~0.115.5"
uvicorn = "~0.34.0"
starlette = ">=0.40.0,<0.47.0"
asgiref = "3.8.1"

# LangChain ecosystem
langchain = "~0.3.20"
langchain-community = "~0.3.20"
langchain-core = "~0.3.70"
langchain-experimental = "0.3.4"
langchain-openai = "~0.3.0"
langchain-text-splitters = "~0.3.0"
langgraph = "~0.4.9"
langsmith = "~0.4.5"
langfuse = "2.57.4"

# AI/ML providers
openai = "~1.95.0"
anthropic = "~0.42.0"
dashscope = "1.20.4"

# Data processing
pydantic = "~2.11.7"
pydantic-core = "2.33.2"
pandas = "~2.2.2"
numpy = "1.26.4"
scipy = "1.14.1"
pyarrow = "17.0.0"
orjson = "~3.10.12"
pytz = "~2024.1"
tzdata = "2024.1"
attrs = "24.2.0"
annotated-types = "0.7.0"
typing-extensions = "~4.14.0"
typing-inspect = "0.9.0"
fastjsonschema = "2.20.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
jsonpath-python = "1.0.6"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jiter = "0.5.0"

# Vector databases and search
chromadb = "~0.6.3"
pymilvus = "~2.5.4"
elasticsearch = "~7.16.0"

# Authentication and security
fastapi-jwt-auth = "0.5.0"
captcha = "0.6.0"
rsa = "4.9"
PyJWT = "1.7.1"
cryptography = "43.0.0"
bcrypt = "4.2.0"

# Data storage and databases
redis = "~5.2.1"
SQLAlchemy = "~2.0.32"
sqlmodel = "~0.0.21"
PyMySQL = "1.1.1"
python-multipart = "0.0.9"

# Document processing
pypdf = "4.3.1"
python-docx = "1.1.2"
pdf2image = "1.17.0"
pdf2docx = "~0.5.8"
pdfplumber = "0.11.4"
reportlab = "~4.4.2"
pymupdf4llm = "0.0.25"
pdfminer = "20191125"
"pdfminer.six" = "20231228"
pypdfium2 = "4.30.0"
html2text = "2024.2.26"
lxml-html-clean = "0.4.2"
docx = "0.2.4"
python-magic = "0.4.27"
unoconv = "0.9.0"
pypandoc = "1.15"

# Web scraping and crawling
beautifulsoup4 = "4.12.3"
selenium = "4.34.2"
requests = "~2.32.3"
requests-html = "0.10.0"
httpx = "~0.27.2"
httpx-sse = "0.4.0"
aiohttp = "~3.11.11"
aiofiles = "~24.1.0"

# Machine learning and embeddings
transformers = "4.44.2"
tokenizers = "0.19.1"
huggingface-hub = "0.24.6"
datasets = "~3.2.0"

# Text processing
lxml = "5.3.0"
nltk = "3.9.1"
tiktoken = "0.7.0"
langdetect = "1.0.9"
regex = "2024.7.24"
rapidfuzz = "3.9.6"
mistune = "3.0.2"
Markdown = "3.7"
markdown-it-py = "3.0.0"
mdurl = "0.1.2"
MarkupSafe = "2.1.5"

# Search and knowledge
tavily-python = "0.7.10"
google-search-results = "2.4.2"
arxiv = "2.1.3"

# Utilities
loguru = "~0.7.2"
rich = "13.8.0"
typer = "0.12.5"
click = "8.1.7"
tqdm = "4.66.5"
tenacity = "8.5.0"
cachetools = "5.5.0"
appdirs = "1.4.4"
platformdirs = "4.2.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
PyYAML = "6.0.2"
humanfriendly = "10.0"
logger = "1.4"
coloredlogs = "15.0.1"
colorama = "0.4.6"
tabulate = "0.9.0"
distro = "1.9.0"
joblib = "1.4.2"
dill = "0.3.8"
xxhash = "3.5.0"
mmh3 = "4.1.0"
yarg = "0.1.9"
orderly-set = "5.2.2"

# Visualization and plotting
matplotlib = "3.9.2"
networkx = "3.3"

# File format support
openpyxl = "3.1.5"
pillow = "10.4.0"
emoji = "2.12.1"
filetype = "1.2.0"
et-xmlfile = "1.1.0"
pi-heif = "0.18.0"
fonttools = "4.53.1"
comtypes = "1.4.11"
olefile = "0.47"
flatbuffers = "24.3.25"
psutil = "6.0.0"
portalocker = "2.10.1"
python-iso639 = "2024.4.27"
python-oxmsg = "0.0.1"
win32-setctime = "1.1.0"

# Cloud storage
boto3 = "1.35.10"
botocore = "1.35.10"
oss2 = "~2.19.1"

# Monitoring and observability
opentelemetry-api = "1.27.0"
opentelemetry-sdk = "1.27.0"
opentelemetry-instrumentation-fastapi = "0.48b0"
opentelemetry-exporter-otlp-proto-common = "1.27.0"
opentelemetry-exporter-otlp-proto-grpc = "1.27.0"
opentelemetry-instrumentation = "0.48b0"
opentelemetry-instrumentation-asgi = "0.48b0"
opentelemetry-proto = "1.27.0"
opentelemetry-semantic-conventions = "0.48b0"
opentelemetry-util-http = "0.48b0"
posthog = "3.6.0"

# Development and testing
pytest = "8.3.3"
pytest-mockito = "0.0.4"
mockito = "1.5.3"
pluggy = "1.5.0"
iniconfig = "2.0.0"
executing = "2.0.1"
stack-data = "0.6.3"
pure-eval = "0.2.3"
asttokens = "2.4.1"
decorator = "5.1.1"
backcall = "0.2.0"
ipython = "8.12.3"
jedi = "0.19.1"
prompt-toolkit = "3.0.47"
traitlets = "5.14.3"
matplotlib-inline = "0.1.7"
pickleshare = "0.7.5"
pyreadline3 = "3.4.1"
jupyter-client = "8.6.2"
jupyter-core = "5.7.2"
jupyterlab-pygments = "0.3.0"
nbclient = "0.10.0"
nbconvert = "7.16.4"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
tornado = "6.4.1"
pyzmq = "26.1.1"

# Async support
anyio = "4.5.0"
websockets = "13.0.1"
aiohappyeyeballs = "2.3.6"
aiosignal = "1.3.1"
aiosqlite = "0.20.0"
frozenlist = "1.4.1"
multidict = "6.0.5"

# Networking and HTTP
h11 = "0.14.0"
httpcore = "1.0.5"
sniffio = "1.3.1"
websocket-client = "1.8.0"
cffi = "1.17.0"
pycparser = "2.22"
certifi = ">=2025.6.15"
urllib3 = "~2.5.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
idna = "3.7"
yarl = ">=1.17.0,<2.0"

# Scientific computing and ML
kiwisolver = "1.4.5"
cycler = "0.12.1"
monotonic = "1.6"
mypy-extensions = "1.0.0"
pyparsing = "3.1.4"
six = "1.16.0"
wrapt = "1.16.0"
iopath = "0.1.10"
pyee = "12.0.0"
greenlet = "3.0.3"
watchfiles = "0.24.0"
wcwidth = "0.2.13"
tinycss2 = "1.3.0"
soupsieve = "2.6"
threadpoolctl = "3.5.0"
webencodings = "0.5.1"
shellingham = "1.5.4"
pyproject-hooks = "1.1.0"
rpds-py = "0.20.0"
referencing = "0.35.1"
marshmallow = "3.21.3"
parso = "0.8.4"
deepdiff = "8.0.1"
contourpy = "1.3.0"
sgmllib3k = "1.0.0"
bleach = "6.1.0"
defusedxml = "0.7.1"
pandocfilters = "1.5.1"
importlib-metadata = "8.4.0"
importlib-resources = "6.4.4"
jmespath = "0.9.3"
s3transfer = "0.10.2"
fake-http-header = "0.3.5"
feedparser = "6.0.11"
mpmath = "1.3.0"
sympy = "1.13.2"
zipp = "3.20.1"
overrides = "7.7.0"
pipreqs = "0.5.0"
Deprecated = "1.2.14"
fastavro = "1.9.5"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
oauthlib = "3.2.2"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
parameterized = "0.9.0"
dataclasses-json = "0.6.7"
fsspec = "2024.6.1"
pysbd = "0.3.4"
onnx = "1.16.2"
onnxruntime = "1.19.0"
protobuf = "4.25.4"
grpcio = "1.66.1"
googleapis-common-protos = "1.65.0"
google-auth = "2.34.0"
scikit-learn = "1.5.1"
pycryptodome = "3.20.0"
PyPika = "0.48.9"
kubernetes = "30.1.0"
types-requests = "2.32.0.20240712"
backoff = "2.2.1"
filelock = "3.15.4"
packaging = "23.2"
setuptools = "72.1.0"
wheel = "0.43.0"
build = "1.2.1"
multiprocess = "0.70.16"
Pygments = "2.18.0"
Jinja2 = "3.1.4"
docopt = "0.6.2"

# MCP support
mcp = "~1.6.0"

# Graphics and visualization tools
pyfiglet = "1.0.3"

# Evaluation and testing
ragas = "~0.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"