[project]
name = "lark-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "Mingguang.Tian",email = "2593666979@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp (>=1.10.1,<2.0.0)",
    "lark-oapi (>=1.4.19,<2.0.0)"
]

[tool.poetry]
packages = [{include = "lark_mcp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
